--- a/mod6/mod6/mod6/mod6.csproj
+++ b/mod6/mod6/mod6/mod6.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7D479FB9-14DC-4D58-9861-17507FA75732}</ProjectGuid>
+    <ProjectGuid>{6C0FF9EA-8629-43F0-B2BA-A9CB38BCA7C7}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>mod5</RootNamespace>
-    <AssemblyName>mod5</AssemblyName>
+    <RootNamespace>mod6</RootNamespace>
+    <AssemblyName>mod6</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,15 +41,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
-    <Compile Include="Component1.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Component1.Designer.cs">
-      <DependentUpon>Component1.cs</DependentUpon>
-    </Compile>
+    <Compile Include="Course.cs" />
+    <Compile Include="Degree.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
+    <Compile Include="Teacher.cs" />
+    <Compile Include="UProgram.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
